# MetaXuda

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TRAFFIC.md  VERSION_HISTORY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  project_showcase.yml
.github/workflows/: ci.yml  codeql.yml  traffic.yml
analytics/: traffic.json
metaxuda/: __init__.py  buffer.py  env.py  patch.py  pipeline.py  stream.py
metaxuda/buffers/: managed.py
metaxuda/demos/: add.py  buffers.py  demo.py  disk.py  fusion.py  matrix_mul.py  non_tiered_buffer_test.py  pipeline.py  streams.py  tiered_buffer_test.py
metaxuda/execution/: direct.py  pool.py
metaxuda/native/: libcudart.dylib  libnvvm.dylib
metaxuda/streams/: base.py  managed.py  numba.py
scripts/: update_traffic.py
tests/: test_package.py
